--- a/BSMapDiffGenerator/BSMapDiffGenerator.csproj
+++ b/BSMapDiffGenerator/BSMapDiffGenerator.csproj
@@ -1,10 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	<LangVersion>10.0</LangVersion>
-    <TargetFramework>netstandard2.1</TargetFramework>
+	  <LangVersion>12.0</LangVersion>
+    <TargetFrameworks>net8.0;netstandard2.1</TargetFrameworks>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="PolySharp" Version="1.14.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <Reference Include="NVorbis">
